# rust-file-sync

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  config.yaml.template  deploy.sh  run_server.sh  setup.sh
.cargo/: config.toml
client/: Cargo.toml
client-cli/: Cargo.toml
client-cli/src/: config.rs  execute.rs  main.rs
client/src/: config.rs  execute.rs  main.rs  setup.rs
deploy/: deploy_client_linux.sh  deploy_client_mac.sh  deploy_client_windows.sh  deploy_server.sh  deploy_server_with_cross.sh  version-bump.sh
deploy/version-bump/: Cargo.toml
deploy/version-bump/src/: main.rs
docs/: file-sync-app.excalidraw.md  old_readme.md  todos.md
server/: .env  Cargo.toml
server/link-share-pwa/: index.html  manifest.webmanifest  share.html  sw.js
server/migrations/: 20260125163613_add_client_configs.sql  20260131113352_add_shared_links.sql  20260131205240_rename_shared_links_to_link.sql  20260203195815_add_server_watch_group.sql  20260217202137_add_file_event.sql  20260220175615_add_non_nulls.sql  20260308231304_add_link_tags.sql  20260331000000_add_pwa_client.sql  20260425000000_add_web_client.sql
server/pwa/: README.md  api.js  file-share.js  index.html  manifest.webmanifest  share.html  sw.js
server/src/: client_file_event.rs  csv_migration.rs  db.rs  file_event.rs  file_history.rs  handler.rs  main.rs  matchable_path.rs  monitor.rs  multipart.rs  read.rs  write.rs
server/src/db/: client_repository.rs  client_watch_group_repository.rs  config_repository.rs  file_event_repository.rs  link_repository.rs  link_tag_repository.rs  mod.rs  server_repository.rs  server_watch_group_repository.rs
server/src/handler/: app.rs  client.rs  client_watch_group.rs  config.rs  link.rs  mod.rs  pwa.rs  server_watch_group.rs  share_link.rs  sync.rs  watch_group.rs
server/src/handler/config/: admin.rs  api.rs  client.rs  mod.rs  sys.rs
server/src/write/: mod.rs  rotating.rs
server/templates/: config_edit.html  configs.html  monitor.html  watch_groups.html
shared/: Cargo.toml
shared/src/: endpoint.rs  file_event.rs  get_files_of_directory.rs  lib.rs  matchable_path.rs  register.rs  sync_instruction.rs  utc_millis.rs
shared/src/dtos/: mod.rs
src/: client_file_event.rs  client_notification.rs  file_event.rs  handler.rs  main.rs  read.rs
web/: Cargo.toml  Trunk.toml  index.html  style.css
web/src/: api.rs  main.rs  types.rs
web/src/components/: card.rs  confirm_dialog.rs  empty_state.rs  icons.rs  loading.rs  message.rs  mod.rs  modal.rs  navbar.rs  tag_badge.rs
web/src/pages/: clients.rs  config_edit.rs  configs.rs  image_gallery.rs  links.rs  mod.rs  monitor.rs  watch_group_files.rs  watch_groups.rs
web/src/pages/clients/: add_watch_group_form.rs  add_wg_form.rs  client_card.rs  edit_client_modal.rs  edit_watch_group_modal.rs  edit_wg_modal.rs  mod.rs  watch_group_assignment.rs  wg_assignment.rs
