[workspace.package]
version = "0.1.0"

[workspace]
resolver = "2"

members = [
    "client",
    "server",
    "shared",
    "deploy/version-bump",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0" }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures = { version = "0.3", features = ["std"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["fmt"] }
