[package]
name = "client-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_yaml = "0.9"
shared = { path = "../shared" }
futures = { workspace = true, features = ["std"] }
futures-util = "0.3.31"
reqwest = { version = "0.12", features = ["default", "json", "multipart", "stream"] }