[package]
name = "client"
version.workspace = true
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_yaml = "0.9"
serde_json = { workspace = true }
shared = { path = "../shared" }
futures = { workspace = true, features = ["std"] }
futures-util = "0.3.31"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "multipart",
    "stream",
    "rustls-tls",
] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["ansi", "env-filter"] }
humantime = "2.2.0"
