[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros", "multipart"] }
tokio = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio-util = { version = "0.7.13", features = ["io"] }
shared = { path = "../shared" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["ansi", "env-filter"] }
tower-http = { version = "0.6.2", features = ["limit", "trace"] }