[package]
name = "server"
version.workspace = true
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros", "multipart"] }
tokio = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio-util = { version = "0.7.13", features = ["io"] }
shared = { path = "../shared" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["ansi", "env-filter"] }
tower-http = { version = "0.6.2", features = ["limit", "trace"] }
sysinfo = { version = "0.33.1" }
sqlx = { version = "0.8.6", features = [
	"sqlite",
	"runtime-tokio",
	"macros",
	"chrono",
] }
askama = "0.15.1"
axum-server = { version = "0.8", features = ["tls-rustls"] }
rust-embed = { version = "8", features = ["axum", "mime-guess"] }

