[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
serde_json = { version = "1.0" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["ansi"] }
