[package]
name = "web"
edition = "2024"
version.workspace = true

[dependencies]
leptos = { version = "0.8.15", features = ["csr"] }
leptos_router = "0.8.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo-net = { version = "0.6", features = ["http", "json"] }
gloo-timers = "0.3"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["HtmlCanvasElement"] }
